<resources>
    <string name="app_name" translatable="false">2048</string>
    <string name="title_screen_img">scattered numbers background image</string>
    <string name="game_desc">a number sliding puzzle game</string>
    <string name="options_button_desc">options button</string>
    <string name="options_button_text">Options</string>
    <string name="start_button_desc">start button</string>
    <string name="start_button_text">START</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_info">Register an account or play as a Guest.</string>
    <string name="register_button_text">Register</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="email_required">Please enter an email or hit play button to skip login.</string>
    <string name="invalid_email">Please enter a valid email or hit play button to skip login.</string>
    <string name="invalid_email_register">Please enter a valid email.</string>
    <string name="invalid_password">Incorrect Password</string>
    <string name="login_verified">Logging in.</string>
    <string name="invalid_login">Email or password is invalid. Try again.</string>
    <string name="verify_password_fail">Passwords did not match. Try again.</string>
    <string name="password_length_fail">Passwords must have a length of six or more. Try again.</string>
    <string name="firebase_auth_failed">Authentication failed.</string>
    <!-- Main fragment -->
    <string name="main_message">Guest</string>
    <string name="up">move up</string>
    <string name="down">move down</string>
    <string name="left">move left</string>
    <string name="right">move right</string>
    <string name="undo">undo one move</string>
    <string name="undo_no_moves">At starting move!</string>
    <string name="win_message">You win! Play again?</string>
    <string name="lose_message">You lose! Play again?</string>
    <string name="new_game">New game</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_email_msg">Register your email</string>
    <string name="register_your_email">Register your email</string>
    <string name="verify_password">Verify Password</string>
</resources>