<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/new_game"
        android:contentDescription="@string/new_game"
        android:icon="@drawable/ic_baseline_videogame_asset_black_24dp"
        android:title="@string/new_game"
        android:tooltipText="@string/new_game"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_options"
        android:icon="@drawable/baseline_settings_black_24dp"
        android:title="@string/options"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_logout_black_24dp"
        android:title="@string/logout"
        app:showAsAction="ifRoom|withText" />
</menu>